# atomic-plugins

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  atomic.db-shm  capacitor.config.ts  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: docker.yml  release.yml
bench/: README.md
crates/atomic-cloud/: Dockerfile  docker-compose.yml
crates/atomic-core/: Cargo.toml
crates/atomic-server/: Cargo.toml
crates/atomic-server/src/: auth.rs  error.rs  event_bridge.rs  lib.rs  main.rs  mcp_auth.rs  state.rs  ws.rs
crates/atomic-server/src/mcp/: server.rs  types.rs
crates/atomic-server/src/routes/: atoms.rs  auth.rs  canvas.rs  chat.rs  clustering.rs  databases.rs  embedding.rs  feeds.rs  graph.rs  import.rs  ingest.rs  mod.rs  oauth.rs  ollama.rs  search.rs  settings.rs  setup.rs  utils.rs  wiki.rs
crates/atomic-server/tests/: api_atoms.rs  api_mcp.rs
extension/: README.md  manifest.json
extension/background/: service-worker.js
extension/lib/: config.js
extension/options/: options.js
extension/popup/: popup.css  popup.html  popup.js
ios/: project.yml
ios/AtomicMobile/: APIClient.swift  AtomCard.swift  AtomDetailView.swift  AtomStore.swift  ContentView.swift  FilterBar.swift  Models.swift  TagBrowserView.swift
plugins/discord/: Dockerfile
plugins/obsidian-plugin/: README.md  manifest.json  package-lock.json  package.json
scripts/: README.md  build-server.js  dev-server.js  drop-database.js  import-wikipedia.js  test-editor-harness.mjs
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: apple_notes.rs  chunking.rs  commands.rs  db.rs  embedding.rs  extraction.rs  http_server.rs  (+3 more)
(+162 files in other folders)
