[package]
name = "atomic-server"
version = "0.1.0"
edition = "2021"
description = "Standalone HTTP server for Atomic knowledge base"
license = "MIT"
default-run = "atomic-server"

[lib]
name = "atomic_server"
path = "src/lib.rs"

[[bin]]
name = "atomic-server"
path = "src/main.rs"

[[bin]]
name = "export-openapi"
path = "src/bin/export-openapi.rs"

[dependencies]
# Core library
atomic-core = { path = "../atomic-core", features = ["openapi", "postgres"] }

# Web framework
actix-web = "4.9"
actix-cors = "0.7"
actix-ws = "0.3"
actix-files = "0.6"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for OpenRouter proxy calls)
reqwest = { version = "0.12", features = ["json"] }

# MCP server
rmcp = { version = "0.15", features = ["server", "macros", "transport-streamable-http-server"] }
rmcp-actix-web = "0.11"
schemars = "1.0"

# OpenAPI
utoipa = { version = "5", features = ["actix_extras", "preserve_order"] }
utoipa-scalar = { version = "0.3", features = ["actix-web"] }

# OAuth / crypto
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
# reqwest with `stream` so MCP integration tests can read SSE bodies.
reqwest = { version = "0.12", features = ["json", "stream"] }
